--- a/app/templates/view_hotspot.html
+++ b/app/templates/view_hotspot.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'bootstrap/base.html' %}
 
-</body>
-</html>
+{% block title %}Cafe List{% endblock %}
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet"
+          href="{{ url_for('.static', filename='/css/styles.css') }}">
+{% endblock %}
+{% block content %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+
+                <h1>All Cafes</h1>
+
+                <table class="table">
+                    <thead>
+                    <tr>
+                        {% for header in cafes[0].keys() %}
+                            <th>{{ header }}</th>
+                        {% endfor %}
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in cafes %}
+                        <tr>
+                            {% for header, cell in row.items() %}
+                                {% if header == 'Location' %}
+                                    <td><a href="{{ cell }}" target="_blank">Map Link</a></td>
+                                {% else %}
+                                    <td>{{ cell }}</td>
+                                {% endif %}
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+
+                <p><a href="{{ url_for('index') }}">Return to index page</a></p>
+
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
