--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -33,5 +33,22 @@ th{
     text-align: center;
 }
 table, td, th{
-    border: 10px solid greenyellow !important;
+    border: 10px solid darkslateblue !important;
+}
+
+.flashed-messages-delete {
+    margin-top: 20px;
+    padding-top: 20px;
+    font-size: 24px;
+    color: red;
+    font-weight: bold;
+    background-color: greenyellow;
+}
+.flashed-messages-add {
+    margin-top: 20px;
+    padding-top: 20px;
+    font-size: 24px;
+    color: green;
+    font-weight: bold;
+    background-color: greenyellow;
 }
