--- a/app/templates/add_hotspot.html
+++ b/app/templates/add_hotspot.html
@@ -11,6 +11,17 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-8">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        <div class="flashes">
+                        {% for category, message in messages %}
+                            <div class="flashed-messages-add alert alert-success alert-{{ category }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                </div>
                 <form action="{{ url_for('add') }}" method="post">
                     <h1>Add a new cafe into the database</h1>
                     {{ form.hidden_tag() }}
